Implement RMI rebind referral support